@@ -1,5 +1,5 @@
 #!@BASHSH@
-# $Header: /code/convert/cvsroot/infrastructure/diradm/src/diradm.in,v 1.14 2005/01/09 08:05:09 robbat2 Exp $
+# $Header: /code/convert/cvsroot/infrastructure/diradm/src/diradm.in,v 1.15 2005/05/03 04:32:13 robbat2 Exp $
 # vim: ts=4 sts=4 noexpandtab sw=4 ft=sh syntax=sh:
 ################################################################################
 #
@@ -96,9 +96,9 @@ done
 ##################### Don't touch anything below this line #####################
 
 # these are defined here as this is what we track primarily for bugs.
-CVS_REVISION='$Revision: 1.14 $'
-CVS_DATE='$Date: 2005/01/09 08:05:09 $'
-CVS_HEADER='$Header: /code/convert/cvsroot/infrastructure/diradm/src/diradm.in,v 1.14 2005/01/09 08:05:09 robbat2 Exp $'
+CVS_REVISION='$Revision: 1.15 $'
+CVS_DATE='$Date: 2005/05/03 04:32:13 $'
+CVS_HEADER='$Header: /code/convert/cvsroot/infrastructure/diradm/src/diradm.in,v 1.15 2005/05/03 04:32:13 robbat2 Exp $'
 # get the stripped versions
 CVS_REVISION="${CVS_REVISION% *}" ; CVS_REVISION="${CVS_REVISION/* }"
 CVS_DATE="${CVS_DATE#* }" ; DATE="${CVS_DATE% *}"
@@ -129,6 +129,7 @@ DATE="@DATE@"
 CUT="@CUT@"
 UNIQ="@UNIQ@"
 SAMBA_NET="@SAMBA_NET@"
+SEDEXT="@SED@ @SED_EXTREGEXP@"
 
 # bring in config file
 . "${CONFIG}"
